--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="/images/Fichier 2.png" alt="steeve logo">
             <ul>
                 <li>About me</li>
-                <li>Project</li>
+                <li>Projects</li>
                 <li>Contact</li>
             </ul>
         </nav>
