--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <div class=" hero-area"><div class="hero-text"><h1>Paturot Steeve</h1>
-            <p>Front End Developer</p>
+            <p>Wordpress Developer</p>
             <div class="button">about me</div>
         </div>
         <div  class="socials">
